--- a/index.css
+++ b/index.css
@@ -16,12 +16,13 @@ body {
 }
 
 canvas {
-    border: 2px solid rebeccapurple;
+    border: 3px solid rgb(13, 54, 149);
 }
 
 .toolbox {
-    background-color: rebeccapurple;
-    border: 1px solid rebeccapurple;
+    margin-top: 1px;
+    background-color: rgb(3, 54, 149);
+    border: 1px solid rgb(3, 54, 149);
     display: flex;
     padding: 16px;
     width: 804px;
